fixed COPYRIGHT link

--- a/summary.html
+++ b/summary.html
@@ -43,7 +43,7 @@ and may be distributed under the terms of
 <a href="http://www.gnu.org">GNU</a>
 <a href="http://www.gnu.org/copyleft/gpl.html">GPL</a>.
 You may distribute commercial applications compiled with CLISP, see file
-<a href="http://cvs.sourceforge.net/cgi-bin/cvsweb.cgi/~checkout~/clisp/COPYRIGHT?cvsroot=clisp"><code>COPYRIGHT</code></a> in the CLISP distribution.</p>
+<a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/~checkout~/clisp/clisp/COPYRIGHT"><code>COPYRIGHT</code></a> in the CLISP distribution.</p>
 
 <p>The user interface comes in German, English, French, Spanish and
 Dutch, and can be changed at run time.</p>
