added debian package link

--- a/resources.html
+++ b/resources.html
@@ -40,8 +40,12 @@ and
  <dt><strong>Binaries for i386-linux</strong></dt>
   <dd><a href="ftp://sunsite.unc.edu/pub/Linux/devel/lang/lisp/"
               >ftp://sunsite.unc.edu/pub/Linux/devel/lang/lisp/</a></dd>
- <dt><strong>Survey about possible use of CLISP together with
-   Emacs</strong> [Marcus Daniels]</dt>
+ <dt><strong>Debian packages</strong>
+     [<a href="mdz@debian.org">Matt Zimmerman</a>]</dt>
+  <dd><a href="http://packages.debian.org/unstable/interpreters/clisp.html"
+        >http://packages.debian.org/unstable/interpreters/clisp.html</a></dd>
+ <dt><strong>Survey about possible use of CLISP together with Emacs</strong>
+     [Marcus Daniels]</dt>
   <dd><a href="http://sayre.sysc.pdx.edu:8001/clisp_and_emacs/clisp_and_emacs.html">http://sayre.sysc.pdx.edu:8001/clisp_and_emacs/clisp_and_emacs.html</a></dd>
  <dt><strong>CLISP on Amiga</strong> [J&ouml;rg H&ouml;hle]</dt>
   <dd><a href="http://fit.gmd.de/~hoehle/amiga-clisp.html"
