removed http://sayre.sysc.pdx.edu:8001/clisp_and_emacs/clisp_and_emacs.html added http://www.lisp.org/mop/ updated ALU and c.l.l FAQ links

--- a/resources.html
+++ b/resources.html
@@ -44,9 +44,6 @@ and
      [<a href="mdz@debian.org">Matt Zimmerman</a>]</dt>
   <dd><a href="http://packages.debian.org/unstable/interpreters/clisp.html"
         >http://packages.debian.org/unstable/interpreters/clisp.html</a></dd>
- <dt><strong>Survey about possible use of CLISP together with Emacs</strong>
-     [Marcus Daniels]</dt>
-  <dd><a href="http://sayre.sysc.pdx.edu:8001/clisp_and_emacs/clisp_and_emacs.html">http://sayre.sysc.pdx.edu:8001/clisp_and_emacs/clisp_and_emacs.html</a></dd>
  <dt><strong>CLISP on Amiga</strong> [J&ouml;rg H&ouml;hle]</dt>
   <dd><a href="http://fit.gmd.de/~hoehle/amiga-clisp.html"
               >http://fit.gmd.de/~hoehle/amiga-clisp.html</a></dd>
@@ -62,6 +59,8 @@ and
  <dt><strong>ANSI CL spec in HTML</strong> [Kent Pitman at Harlequin Ltd.]</dt>
   <dd><a href="http://www.lisp.org/HyperSpec/FrontMatter/"
               >http://www.lisp.org/HyperSpec/FrontMatter/</a></dd>
+ <dt><strong>MOP (Meta-Object Protocol)</strong></dt>
+  <dd><a href="http://www.lisp.org/mop/">http://www.lisp.org/mop/</a></dd>
  <dt><strong>CLtL2 in HTML</strong> [Mark Kantrowitz]</dt>
   <dd><a href="http://www.cs.cmu.edu/afs/cs/project/ai-repository/ai/lang/lisp/doc/cltl/cltl_ht.tgz">ftp://ftp.cs.cmu.edu/user/ai/lang/lisp/doc/cltl/cltl_ht.tgz</a>
   <a href="http://www.cs.cmu.edu/afs/cs.cmu.edu/project/ai-repository/ai/html/cltl/cltl2.html">http://www.cs.cmu.edu/afs/cs.cmu.edu/project/ai-repository/ai/html/cltl/cltl2.html</a></dd>
@@ -76,14 +75,14 @@ the job</a> [<a href="http://www.podval.org/~sds">Sam Steingold</a>]</p>
            >http://fit.gmd.de/~hoehle/links.html#Lisp</a>
 [J&ouml;rg H&ouml;hle]</p>
 
-<p><a href="http://www.elwood.com/alu/index.htm"
-           >http://www.elwood.com/alu/index.htm</a>
-[Brad Miller, Howard Stearns]</p>
+<p><a href="http://www.alu.org/">The Association of Lisp Users</a>
+[<a href="mailto:webmaster@alu.org">Matt Emerson</a>,
+ <a href="mailto:howard@elwood.com">Howard R. Stearns</a>]</p>
 
-<p>The FAQ of the <a href="news:comp.lang.lisp">comp.lang.lisp</a>
-  newsgroup, posted regularly:
-<a href="http://www.cis.ohio-state.edu/hypertext/faq/usenet/lisp-faq/top.html"
- >http://www.cis.ohio-state.edu/hypertext/faq/usenet/lisp-faq/top.html</a></p>
+<p>The <a href="news:comp.lang.lisp">comp.lang.lisp</a>
+ <a href="http://www.faqs.org/faqs/lisp-faq/">FAQ</a> list, also at
+ <a href="http://www.cs.cmu.edu/Web/Groups/AI/html/faqs/lang/lisp/top.html"
+    >CMU</a>.</p>
 
 <h2>About packages running in CLISP</h2>
 
