removed Hoehle, added cliki

--- a/resources.html
+++ b/resources.html
@@ -44,9 +44,6 @@ and
      [<a href="mdz@debian.org">Matt Zimmerman</a>]</dt>
   <dd><a href="http://packages.debian.org/unstable/interpreters/clisp.html"
         >http://packages.debian.org/unstable/interpreters/clisp.html</a></dd>
- <dt><strong>CLISP on Amiga</strong> [J&ouml;rg H&ouml;hle]</dt>
-  <dd><a href="http://fit.gmd.de/~hoehle/amiga-clisp.html"
-              >http://fit.gmd.de/~hoehle/amiga-clisp.html</a></dd>
  <dt><strong>Screenshots of CLISP's Unicode capabilities</strong></dt>
   <dd>Here is a <a href="fibjap.lsp">source file</a> with Japanese
    characters in it.  Edited <a href="fibjap-emacs.gif">in GNU
@@ -71,10 +68,6 @@ and
 <p><a href="http://www.podval.org/~sds/tool.html">The right tool for
 the job</a> [<a href="http://www.podval.org/~sds">Sam Steingold</a>]</p>
 
-<p><a href="http://fit.gmd.de/~hoehle/links.html#Lisp"
-           >http://fit.gmd.de/~hoehle/links.html#Lisp</a>
-[J&ouml;rg H&ouml;hle]</p>
-
 <p><a href="http://www.alu.org/">The Association of Lisp Users</a>
 [<a href="mailto:webmaster@alu.org">Matt Emerson</a>,
  <a href="mailto:howard@elwood.com">Howard R. Stearns</a>]</p>
@@ -83,6 +76,10 @@ the job</a> [<a href="http://www.podval.org/~sds">Sam Steingold</a>]</p>
  <a href="http://www.faqs.org/faqs/lisp-faq/">FAQ</a> list, also at
  <a href="http://www.cs.cmu.edu/Web/Groups/AI/html/faqs/lang/lisp/top.html"
     >CMU</a>.</p>
+
+<p><a href="http://ww.telent.net/cliki/">CLiki</a> - intends to provide
+ a collection of links to and resources for free software implemented in
+ Common Lisp and available on Unix-like systems.</p>
 
 <h2>About packages running in CLISP</h2>
 
