--- a/clash.html
+++ b/clash.html
@@ -2,7 +2,7 @@
           "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
- <meta http-equiv="Content-Type" content="text/html"/>
+ <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
  <meta http-equiv="description" content="CLISP as a login shell"/>
  <link rel="stylesheet" href="clisp.css" type="text/css"/>
  <title>CLASH: CLisp As SHell</title>
