--- a/resources.html
+++ b/resources.html
@@ -81,6 +81,9 @@ the job</a> [<a href="http://www.podval.org/~sds">Sam Steingold</a>]</p>
  a collection of links to and resources for free software implemented in
  Common Lisp and available on Unix-like systems.</p>
 
+<p><a href="http://www.paulgraham.com/lisplinks.html">Lisp Links</a>
+ by <a href="http://www.paulgraham.com/">Paul Graham</a></p>
+
 <h2>About packages running in CLISP</h2>
 
 <dl>
@@ -120,9 +123,9 @@ the job</a> [<a href="http://www.podval.org/~sds">Sam Steingold</a>]</p>
        second best alternative.)
    <a href="http://www-aig.jpl.nasa.gov/home/gat/home.html"
            >http://www-aig.jpl.nasa.gov/home/gat/home.html</a></dd>
- <dt><strong>Yahoo! Store</strong> [Paul Graham]</dt>
-  <dd><a href="http://store.yahoo.com/"
-              >http://store.yahoo.com/</a></dd>
+ <dt><strong>Yahoo! Store</strong>
+     [<a href="http://www.paulgraham.com/">Paul Graham</a>]</dt>
+  <dd><a href="http://store.yahoo.com/">http://store.yahoo.com/</a></dd>
 </dl>
 
 <hr/>
