--- a/resources.html
+++ b/resources.html
@@ -84,7 +84,7 @@ the job</a> [<a href="http://www.podval.org/~sds">Sam Steingold</a>]</p>
 <p><a href="http://www.paulgraham.com/lisplinks.html">Lisp Links</a>
  by <a href="http://www.paulgraham.com/">Paul Graham</a></p>
 
-<h2>About packages running in CLISP</h2>
+<h2>Packages running in CLISP</h2>
 
 <dl>
  <dt><strong>Various packages</strong> [Bruno Haible]</dt>
@@ -113,6 +113,12 @@ the job</a> [<a href="http://www.podval.org/~sds">Sam Steingold</a>]</p>
  <dt><strong>Maxima</strong>, a descendant of Macsyma [Bill Schelter]</dt>
   <dd><a href="http://www.ma.utexas.edu/users/wfs/maxima.html"
               >http://www.ma.utexas.edu/users/wfs/maxima.html</a></dd>
+ <dt><strong>ACL2</strong> (Applicative Common Lisp)
+  - a computational logic system
+  [<a href="mailto:kaufmann@cs.utexas.edu">Matt Kaufmann</a>,
+   <a href="mailto:moore@cs.utexas.edu">J Strother Moore</a>]</dt>
+  <dd><a href="http://www.cs.utexas.edu/users/moore/acl2/"
+              >http://www.cs.utexas.edu/users/moore/acl2/</a></dd>
  <dt><strong>Punimax</strong>, a rather antiquated computer algebra system</dt>
   <dd><a href="ftp://tsx-11.mit.edu/pub/linux/packages/lisp/"
               >ftp://tsx-11.mit.edu/pub/linux/packages/lisp/</a>,
