ACL2 works with CLISP starting with v2.6

--- a/resources.html
+++ b/resources.html
@@ -114,7 +114,7 @@ the job</a> [<a href="http://www.podval.org/~sds">Sam Steingold</a>]</p>
   <dd><a href="http://www.ma.utexas.edu/users/wfs/maxima.html"
               >http://www.ma.utexas.edu/users/wfs/maxima.html</a></dd>
  <dt><strong>ACL2</strong> (Applicative Common Lisp)
-  - a computational logic system
+  - a computational logic system [starting with version 2.6]
   [<a href="mailto:kaufmann@cs.utexas.edu">Matt Kaufmann</a>,
    <a href="mailto:moore@cs.utexas.edu">J Strother Moore</a>]</dt>
   <dd><a href="http://www.cs.utexas.edu/users/moore/acl2/"
