mention the debugger

--- a/propaganda.html
+++ b/propaganda.html
@@ -59,6 +59,8 @@
   <dd><ul>
    <li>an interpreter</li>
    <li>a compiler which makes execution of programs 5 times faster</li>
+   <li>a source-level debugger which allows stepping through interpreted
+    code, form by form</li>
    <li>all data types with unlimited size (the size need never be
     declared, the size of lists and arrays may be changed dynamically)</li>
    <li>integers of arbitrary length</li>
