--- a/impnotes.html
+++ b/impnotes.html
@@ -45,7 +45,7 @@ section entitled "GNU Free Documentation License".</p>
 <p><b>Table of Contents</b></p>
 
 <dl>
-<dt><a href="#d39e50"><span class="inlinemediaobject"><img src="clisp.gif"
+<dt><a href="#d39e50"><span class="inlinemediaobject"><img src="clisp.png"
 height="48" width="48" alt="[CLISP icon]"></span></a></dt>
 
 <dt>I <a href="#clhs-chapters">Chapters or the [<a href="#CLHS">Common
@@ -1154,7 +1154,7 @@ href="http://clisp.cons.org" target="_top"><b>CLISP</b></a></a></dt>
 <div class="titlepage">
 <div>
 <h2 class="title"><a name="d39e50"></a><span class=
-"inlinemediaobject"><img src="clisp.gif" height="48" width="48" alt=
+"inlinemediaobject"><img src="clisp.png" height="48" width="48" alt=
 "[CLISP icon]"></span></h2>
 </div>
 </div>
