--- a/resources.html
+++ b/resources.html
@@ -47,8 +47,8 @@ and
         >http://packages.debian.org/unstable/interpreters/clisp.html</a></dd>
  <dt><strong>Screenshots of CLISP's Unicode capabilities</strong></dt>
   <dd>Here is a <a href="fibjap.lsp">source file</a> with Japanese
-   characters in it.  Edited <a href="fibjap-emacs.gif">in GNU
-   Emacs</a>, then run <a href="fibjap-xterm.gif">in xterm</a>.</dd>
+   characters in it.  Edited <a href="fibjap-emacs.png">in GNU
+   Emacs</a>, then run <a href="fibjap-xterm.png">in xterm</a>.</dd>
 </dl>
 
 <h2>Documentation about Common Lisp</h2>
@@ -137,7 +137,7 @@ the job</a> [<a href="http://www.podval.org/~sds">Sam Steingold</a>]</p>
 
 <hr/>
 <table width="100%"><tr><td align="left">
- <a href="http://clisp.cons.org"><img src="clisp.gif" width="48"
+ <a href="http://clisp.cons.org"><img src="clisp.png" width="48"
     height="48" alt="[CLISP home]"/></a></td>
  <td align="right"><a href="http://validator.w3.org/check/referer"><img
      src="http://www.w3.org/Icons/valid-xhtml10"
