--- a/summary.html
+++ b/summary.html
@@ -51,7 +51,7 @@ Dutch, and can be changed at run time.</p>
 
 <hr/>
 <table width="100%"><tr><td align="left">
- <a href="http://clisp.cons.org"><img src="clisp.gif" width="48"
+ <a href="http://clisp.cons.org"><img src="clisp.png" width="48"
     height="48" alt="[CLISP home]"/></a></td>
  <td align="right"><a href="http://validator.w3.org/check/referer"><img
      src="http://www.w3.org/Icons/valid-xhtml10"
