--- a/clash.html
+++ b/clash.html
@@ -5,7 +5,9 @@
 <head>
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
  <meta http-equiv="description" content="CLISP as a login shell"/>
+ <link rev="made" href="mailto:peter.wood@worldonline.dk"/>
  <link rel="stylesheet" href="clisp.css" type="text/css"/>
+ <link rel="top" href="index.html" type="text/html" title="CLISP home"/>
  <title>CLASH: CLisp As SHell</title>
 </head>
 <body>
