--- a/resources.html
+++ b/resources.html
@@ -5,7 +5,9 @@
 <head>
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
  <meta http-equiv="description" content="CLISP resources"/>
+ <link rev="made" href="mailto:clisp-list@lists.sourceforge.net"/>
  <link rel="stylesheet" href="clisp.css" type="text/css"/>
+ <link rel="top" href="index.html" type="text/html" title="CLISP home"/>
  <title>CLISP Common Lisp Resources</title>
 </head>
 
@@ -90,16 +92,16 @@ the job</a> [<a href="http://www.podval.org/~sds">Sam Steingold</a>]</p>
 <dl>
  <dt><strong>Various packages</strong> [Bruno Haible]</dt>
   <dd><a href="ftp://clisp.cons.org/pub/lisp/clisp/packages/"
-              >ftp://clisp.cons.org/pub/lisp/clisp/packages/</a>
-<a href="ftp://clisp.cons.org/pub/lisp/clisp/contrib/"
-        >ftp://clisp.cons.org/pub/lisp/clisp/contrib/</a></dd>
+              >ftp://clisp.cons.org/pub/lisp/clisp/packages/</a><br/>
+   <a href="ftp://clisp.cons.org/pub/lisp/clisp/contrib/"
+           >ftp://clisp.cons.org/pub/lisp/clisp/contrib/</a></dd>
  <dt><strong>SLIK</strong> GUI toolkit [Ira Kalet]</dt>
   <dd><a href="ftp://ftp.radonc.washington.edu/dist/slik/"
               >ftp://ftp.radonc.washington.edu:/dist/slik/</a><br/>
    <a href="http://www.radonc.washington.edu/medinfo/prism/"
            >http://www.radonc.washington.edu/medinfo/prism/</a></dd>
  <dt><strong>Garnet 3.0</strong> [Brad A. Myers, Andrew Mickish et al]</dt>
-  <dd><a href="http://www.cs.cmu.edu/afs/cs.cmu.edu/project/garnet/www/garnet-home.html">http://www.cs.cmu.edu/afs/cs.cmu.edu/project/garnet/www/garnet-home.html</a>,<br/>
+  <dd><a href="http://www.cs.cmu.edu/afs/cs.cmu.edu/project/garnet/www/garnet-home.html">http://www.cs.cmu.edu/afs/cs.cmu.edu/project/garnet/www/garnet-home.html</a><br/>
    <a href="ftp://ftp.csl.sri.com/pub/users/gilham"
            >ftp://ftp.csl.sri.com/pub/users/gilham</a></dd>
  <dt><strong>with-wish</strong> [Matthias Lindner]</dt>
@@ -113,7 +115,9 @@ the job</a> [<a href="http://www.podval.org/~sds">Sam Steingold</a>]</p>
               >http://wmwap1.math.uni-wuppertal.de/EMA-XPS/</a></dd>
  <dt><strong>Maxima</strong>, a descendant of Macsyma [Bill Schelter]</dt>
   <dd><a href="http://www.ma.utexas.edu/users/wfs/maxima.html"
-              >http://www.ma.utexas.edu/users/wfs/maxima.html</a></dd>
+              >http://www.ma.utexas.edu/users/wfs/maxima.html</a><br/>
+      <a href="http://www.gnu.org/software/maxima/"
+              >http://www.gnu.org/software/maxima/</a></dd>
  <dt><strong>ACL2</strong> (Applicative Common Lisp)
   - a computational logic system [starting with version 2.6]
   [<a href="mailto:kaufmann@cs.utexas.edu">Matt Kaufmann</a>,
