--- a/summary.html
+++ b/summary.html
@@ -5,7 +5,9 @@
 <head>
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
  <meta http-equiv="description" content="CLISP summary"/>
+ <link rev="made" href="mailto:clisp-list@lists.sourceforge.net"/>
  <link rel="stylesheet" href="clisp.css" type="text/css"/>
+ <link rel="top" href="index.html" type="text/html" title="CLISP home"/>
  <title>CLISP Common Lisp Summary</title>
 </head>
 
