--- a/resources.html
+++ b/resources.html
@@ -87,6 +87,10 @@ the job</a> [<a href="http://www.podval.org/~sds">Sam Steingold</a>]</p>
 <p><a href="http://www.paulgraham.com/lisplinks.html">Lisp Links</a>
  by <a href="http://www.paulgraham.com/">Paul Graham</a></p>
 
+<p><a href="http://common-lisp.info/">The Common Lisp Programming
+Language</a> by <a href="http://world.std.com/~pitman/pitman.html">Kent
+M. Pitman</a></p>
+
 <h2>Packages running in CLISP</h2>
 
 <dl>
