http://slashdot.org/article.pl?sid=01/11/03/1726251&mode=nocomment

--- a/resources.html
+++ b/resources.html
@@ -85,11 +85,14 @@ the job</a> [<a href="http://www.podval.org/~sds">Sam Steingold</a>]</p>
  Common Lisp and available on Unix-like systems.</p>
 
 <p><a href="http://www.paulgraham.com/lisplinks.html">Lisp Links</a>
- by <a href="http://www.paulgraham.com/">Paul Graham</a></p>
+ [<a href="http://www.paulgraham.com/">Paul Graham</a>]</p>
 
-<p><a href="http://common-lisp.info/">The Common Lisp Programming
-Language</a> by <a href="http://world.std.com/~pitman/pitman.html">Kent
-M. Pitman</a></p>
+<p><a href="http://common-lisp.info/">The Common Lisp Programming Language</a>
+ [<a href="http://world.std.com/~pitman/pitman.html">Kent M. Pitman</a>]</p>
+
+<p><a href="http://slashdot.org/article.pl?sid=01/11/03/1726251&mode=nocomment"
+ >Kent M. Pitman Answers On Lisp And Much More</a>
+ [<a href="http://slashdot.org/">Slashdot</a>]</p>
 
 <h2>Packages running in CLISP</h2>
 
