http://slashdot.org/article.pl?sid=01/11/13/0420226&mode=nocomment

--- a/resources.html
+++ b/resources.html
@@ -91,7 +91,9 @@ the job</a> [<a href="http://www.podval.org/~sds">Sam Steingold</a>]</p>
  [<a href="http://world.std.com/~pitman/pitman.html">Kent M. Pitman</a>]</p>
 
 <p><a href="http://slashdot.org/article.pl?sid=01/11/03/1726251&mode=nocomment"
- >Kent M. Pitman Answers On Lisp And Much More</a>
+      >Kent M. Pitman Answers On Lisp And Much More</a>,
+   <a href="http://slashdot.org/article.pl?sid=01/11/13/0420226&mode=nocomment"
+      >Kent M. Pitman's Second Wind</a>
  [<a href="http://slashdot.org/">Slashdot</a>]</p>
 
 <h2>Packages running in CLISP</h2>
