mention http://sourceforge.net/projects/xindy/

--- a/resources.html
+++ b/resources.html
@@ -135,17 +135,24 @@ the job</a> [<a href="http://www.podval.org/~sds">Sam Steingold</a>]</p>
               >http://www.cs.utexas.edu/users/moore/acl2/</a></dd>
  <dt><strong>Punimax</strong>, a rather antiquated computer algebra system</dt>
   <dd><a href="ftp://tsx-11.mit.edu/pub/linux/packages/lisp/"
-              >ftp://tsx-11.mit.edu/pub/linux/packages/lisp/</a>,
+              >ftp://tsx-11.mit.edu/pub/linux/packages/lisp/</a><br/>
   <a href="http://www.can.nl/SystemsOverview/General/PUNIMAX.html"
           >http://www.can.nl/SystemsOverview/General/PUNIMAX.html</a></dd>
- <dt><strong>New Millenium Space Flight Mission</strong> [Erann Gat]</dt>
+ <dt><strong>New Millenium Space Flight Mission</strong>
+     [<a href="gat@jpl.nasa.gov">Erann Gat</a>]</dt>
   <dd>(They chose Harlequin CL for the space flight, with CLISP as
-       second best alternative.)
+       the second best alternative.)
    <a href="http://www-aig.jpl.nasa.gov/home/gat/home.html"
            >http://www-aig.jpl.nasa.gov/home/gat/home.html</a></dd>
  <dt><strong>Yahoo! Store</strong>
      [<a href="http://www.paulgraham.com/">Paul Graham</a>]</dt>
   <dd><a href="http://store.yahoo.com/">http://store.yahoo.com/</a></dd>
+ <dt><strong>xindy, the fleXible INDexing sYstem</strong>
+     [<a href="jschrod@acm.org">Joachim Schrod</a>]</dt>
+  <dd><a href="http://www.iti.informatik.th-darmstadt.de/xindy/"
+              >http://www.iti.informatik.th-darmstadt.de/xindy/</a><br/>
+      <a href="http://sourceforge.net/projects/xindy/"
+              >http://sourceforge.net/projects/xindy/</a></dd>
 </dl>
 
 <hr/>
