mention http://www-jcsu.jesus.cam.ac.uk/~csr21/lispfaq.html

--- a/resources.html
+++ b/resources.html
@@ -76,9 +76,12 @@ the job</a> [<a href="http://www.podval.org/~sds">Sam Steingold</a>]</p>
  <a href="mailto:howard@elwood.com">Howard R. Stearns</a>]</p>
 
 <p>The <a href="news:comp.lang.lisp">comp.lang.lisp</a>
- <a href="http://www.faqs.org/faqs/lisp-faq/">FAQ</a> list, also at
+ <a href="http://www-jcsu.jesus.cam.ac.uk/~csr21/lispfaq.html">FAQ</a> list,
+ as well as the <a href="http://www.faqs.org/faqs/lisp-faq/">old</a>
+ list, also at
  <a href="http://www.cs.cmu.edu/Web/Groups/AI/html/faqs/lang/lisp/top.html"
-    >CMU</a>.</p>
+    >CMU</a>, (no longer maintained, but may be an important source of
+  information still).</p>
 
 <p><a href="http://ww.telent.net/cliki/">CLiki</a> - intends to provide
  a collection of links to and resources for free software implemented in
