comp.lang.lisp --> google

--- a/resources.html
+++ b/resources.html
@@ -75,7 +75,8 @@ the job</a> [<a href="http://www.podval.org/~sds">Sam Steingold</a>]</p>
 [<a href="mailto:webmaster@alu.org">Matt Emerson</a>,
  <a href="mailto:howard@elwood.com">Howard R. Stearns</a>]</p>
 
-<p>The <a href="news:comp.lang.lisp">comp.lang.lisp</a>
+<p>The <a href="http://groups.google.com/groups?group=comp.lang.lisp"
+  >comp.lang.lisp</a>
  <a href="http://www-jcsu.jesus.cam.ac.uk/~csr21/lispfaq.html">FAQ</a> list,
  as well as the <a href="http://www.faqs.org/faqs/lisp-faq/">old</a>
  list, also at
