debian packages are now maintained by Will Newton <will@misconception.org.uk>

--- a/resources.html
+++ b/resources.html
@@ -44,7 +44,7 @@ and
   <dd><a href="ftp://sunsite.unc.edu/pub/Linux/devel/lang/lisp/"
               >ftp://sunsite.unc.edu/pub/Linux/devel/lang/lisp/</a></dd>
  <dt><strong>Debian packages</strong>
-     [<a href="mdz@debian.org">Matt Zimmerman</a>]</dt>
+     [<a href="mailto:will@misconception.org.uk">Will Newton</a>]</dt>
   <dd><a href="http://packages.debian.org/unstable/interpreters/clisp.html"
         >http://packages.debian.org/unstable/interpreters/clisp.html</a></dd>
  <dt><strong>Screenshots of CLISP's Unicode capabilities</strong></dt>
