fixed CLISP ftp links

--- a/resources.html
+++ b/resources.html
@@ -16,11 +16,10 @@
 <h1>FTP resources</h1>
 
 <p>CLISP is available via anonymous ftp from
-<a href="ftp://clisp.cons.org/pub/lisp/clisp/"
-   >ftp://clisp.cons.org/pub/lisp/clisp/</a>
-and
-<a href="ftp://clisp.sourceforge.net/pub/clisp/"
-   >ftp://clisp.sourceforge.net/pub/clisp/</a>.</p>
+ <ul><li><a href="ftp://cvs2.cons.org/pub/lisp/clisp/"
+                 >ftp://cvs2.cons.org/pub/lisp/clisp/</a> and</li>
+ <li><a href="ftp://ftp.gnu.org/pub/gnu/clisp/"
+             >ftp://ftp.gnu.org/pub/gnu/clisp/</a>.</li></ul></p>
 
 <h1>WWW resources</h1>
 
