fixed XHTML compliance

--- a/resources.html
+++ b/resources.html
@@ -15,11 +15,11 @@
 
 <h1>FTP resources</h1>
 
-<p>CLISP is available via anonymous ftp from
+<p>CLISP is available via anonymous ftp from</p>
  <ul><li><a href="ftp://cvs2.cons.org/pub/lisp/clisp/"
                  >ftp://cvs2.cons.org/pub/lisp/clisp/</a> and</li>
  <li><a href="ftp://ftp.gnu.org/pub/gnu/clisp/"
-             >ftp://ftp.gnu.org/pub/gnu/clisp/</a>.</li></ul></p>
+             >ftp://ftp.gnu.org/pub/gnu/clisp/</a>.</li></ul>
 
 <h1>WWW resources</h1>
 
@@ -93,9 +93,11 @@ the job</a> [<a href="http://www.podval.org/~sds">Sam Steingold</a>]</p>
 <p><a href="http://common-lisp.info/">The Common Lisp Programming Language</a>
  [<a href="http://world.std.com/~pitman/pitman.html">Kent M. Pitman</a>]</p>
 
-<p><a href="http://slashdot.org/article.pl?sid=01/11/03/1726251&mode=nocomment"
+<p><a
+href="http://slashdot.org/article.pl?sid=01/11/03/1726251&amp;mode=nocomment"
       >Kent M. Pitman Answers On Lisp And Much More</a>,
-   <a href="http://slashdot.org/article.pl?sid=01/11/13/0420226&mode=nocomment"
+   <a
+href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
       >Kent M. Pitman's Second Wind</a>
  [<a href="http://slashdot.org/">Slashdot</a>]</p>
 
