--- a/propaganda.html
+++ b/propaganda.html
@@ -18,7 +18,7 @@
 <dl>
  <dt><strong>Common Lisp</strong> is</dt>
   <dd><ul>
-    <li>a convential programming language and an AI language</li>
+    <li>a general-purpose programming language and an AI language</li>
     <li>interactive</li>
     <li>a Lisp for professional use</li>
    </ul></dd>
@@ -27,14 +27,14 @@
   <dd><ul>
    <li>easy to test (interactive)</li>
    <li>easy to maintain (depending on programming style)</li>
-   <li>portable (there is a standard for the language and the library
-    functions)</li>
+   <li>portable across hardware/OS platforms and implementations
+    (there is a standard for the language and the library functions)</li>
   </ul></dd>
 
  <dt><strong>Our Common Lisp CLISP</strong></dt>
   <dd><ul>
    <li>needs only 2 MB of memory</li>
-   <li>implements most of the ANSI standard, as well as some extensions</li>
+   <li>implements most of the ANSI standard, as well as many extensions</li>
    <li>can call your preferred editor</li>
    <li>is freely distributable</li>
   </ul></dd>
@@ -44,7 +44,7 @@
    <li>clear syntax, carefully designed semantics</li>
    <li>several data types: numbers, strings, arrays, lists, characters,
     symbols, structures, streams etc.</li>
-   <li>runtime typing: the programmer needn't bother about type
+   <li>runtime typing: the programmer need not bother about type
     declarations, but he gets notified on type violations.</li>
    <li>many generic functions:
     88 arithmetic functions for all kinds of numbers (integers, ratios,
