--- a/faq.html
+++ b/faq.html
@@ -39,7 +39,7 @@
 
 <h3 id="gpl">License</h3>
 
-<p><a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/clisp/clisp/doc/Why-CLISP-is-under-GPL?rev=HEAD&content-type=text/vnd.viewcvs-markup">Why CLISP is under GPL</a>?</p>
+<p><a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/clisp/clisp/doc/Why-CLISP-is-under-GPL?rev=HEAD&amp;content-type=text/vnd.viewcvs-markup">Why CLISP is under GPL</a>?</p>
 
 <h3 id="menorah">Why is CLISP using menorah as the logo?</h3>
 
@@ -62,8 +62,7 @@ programmer, and CLISP is a vehicle that carries the Light.</p>
 <p>When you encounter a bug in CLISP, please report it to the
   <a href="http://lists.sourceforge.net/lists/listinfo/clisp-list">CLISP
   mailing list</a> or the
-  <a href="http://sourceforge.net/tracker/?func=add&group_id=1355&atid=101355"
-   >SourceForge bug tracker</a>.</p>
+  <a href="http://sourceforge.net/tracker/?func=add&amp;group_id=1355&amp;atid=101355">SourceForge bug tracker</a>.</p>
 
 <p>When submitting a bug report, please specify the
 following information:</p>
@@ -94,7 +93,6 @@ following information:</p>
 
 <p><a href="#index">index</a></p>
 
-<p><br/><br/></p><hr/>
 
 <hr/>
 <table width="100%"><tr><td align="left">
